--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,17 +96,17 @@
   .task-list {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-bottom: 2rem;
-flex-wrap: wrap;
-justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   
   .task-card {
     background: white;
     border-radius: 8px;
     padding: 1.5rem;
-    width: 400px;
+    width: 350px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     transition: opacity 0.3s ease, transform 0.3s ease;
     border-left: 4px solid var(--primary);
@@ -591,6 +591,8 @@ justify-content: space-between;
 
   .btn-secondary:hover {
     background-color: #2a2b8c;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   .btn-danger {
     background-color: var(--danger);
@@ -599,7 +601,21 @@ justify-content: space-between;
 
   .btn-danger:hover {
     background-color: #b10351;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+
+
+.btn-success {
+  background-color: var(--completed);
+  color: white;
+}
+
+.btn-success:hover {
+  background-color: #155724;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
   /* No Tasks State */
   .no-tasks {
     text-align: center;
